--- a/server_discovery/src/main/resources/application.yml
+++ b/server_discovery/src/main/resources/application.yml
@@ -3,7 +3,19 @@ server:
 
 eureka:
   instance:
-    hostname: localhost
+    hostname: eureka-server
   client:
     register-with-eureka: false
     fetch-registry: false
+    serviceUrl:
+      defaultZone: http://eureka-server:8761/eureka/
+
+# Add management endpoints for health checks
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
+  endpoint:
+    health:
+      show-details: always
